Mobile UI for order page, dropdown open on new row on add item success, field reset after new item addition in view order, calculation fix of base rate, showing shop name in user basket, cost price visible only to superadmin

--- a/src/index.css
+++ b/src/index.css
@@ -110,3 +110,11 @@ input::-webkit-inner-spin-button {
 .ant-table-bordered .ant-table-cell:last-child {
   padding: 0 !important;
 }
+
+.description-table
+  .ant-table-bordered
+  .ant-table-tbody
+  tr:last-child
+  .ant-table-cell {
+  padding-block: 10px !important;
+}
